2006-05-21  James Turner  <james@worldforge.org>

	* Eris/Response.h: fix corruption issue related to previous change;
	  if the response is destroyed normally, unregister the callback from
	  the member object.

2006-05-21  James Turner  <james@worldforge.org>

	* Eris/Avatar.h, Eris/Avatar.h, Eris/Account.cpp: move deactivate 
	  implementation to Avatar (Account::deactivateCharacter proxies). Also, 
	  there is no longer a requirement for the Account to be in the logged-in 
	  state. This fixes Simon's crash.
	  
	* Eris/Connection.cpp: check the default router exists before dispatching
	  to it (happens if Avatars are active when the account has been logged
	  out)
	  
	* Eris/Response.cpp, Eris/Response.h: use the sigc::trackable behaviour
	  to NULL of MemberResponse objects if the target object goes away before
	  the response fires. This happens easily with the Avatar logout response.

2006-05-20  James Turner  <james@worldforge.org>
	
	* strip out various debug() messages which occur in common code paths,
	  since they are un-needed now, and incur a slight overhead even if
	  not displayed.
	
2006-05-19  James Turner  <james@worldforge.org>
	
	* Eris/View.cpp: fix bug where the TLVE was unset when emitting
	  Avatar::GotCharacterEntity (causing problems in sear). Re-order
	  View::sight to set TLVE before computing entity visibility.

2006-05-19  James Turner  <james@worldforge.org>

	* Eris/Account.cpp: when account is deleted, and the connection is
	  still live, send logout ops from the account and each active character.

2006-05-17  James Turner  <james@worldforge.org>

	* Eris/DeleteLaters.cpp: switch the delete later queue to be a deque
	  instead of a vector, and hence preserve order of items to be deleted.

2006-05-17  James Turner  <james@worldforge.org>

	* Eris/Account.cpp: no longer disconnect the connection when logout
	  from the account completes.

2006-05-16  James Turner  <james@worldforge.org>
