@@ -119,30 +119,6 @@
 		C4F0C5910837FB4800C9FB48 /* sigc++.framework in Frameworks */ = {isa = PBXBuildFile; fileRef = C4BD59C806AAA0F20039CF5E /* sigc++.framework */; };
 /* End PBXBuildFile section */
 
-/* Begin PBXBuildStyle section */
-		C43FBCE7054315B9008FC2ED /* Development */ = {
-			isa = PBXBuildStyle;
-			buildSettings = {
-				COPY_PHASE_STRIP = NO;
-				GCC_DYNAMIC_NO_PIC = NO;
-				GCC_ENABLE_FIX_AND_CONTINUE = NO;
-				GCC_GENERATE_DEBUGGING_SYMBOLS = YES;
-				GCC_OPTIMIZATION_LEVEL = 0;
-				ZERO_LINK = NO;
-			};
-			name = Development;
-		};
-		C43FBCE8054315B9008FC2ED /* Deployment */ = {
-			isa = PBXBuildStyle;
-			buildSettings = {
-				COPY_PHASE_STRIP = YES;
-				GCC_ENABLE_FIX_AND_CONTINUE = NO;
-				ZERO_LINK = NO;
-			};
-			name = Deployment;
-		};
-/* End PBXBuildStyle section */
-
 /* Begin PBXContainerItemProxy section */
 		C45BA20708C5912200FCB602 /* PBXContainerItemProxy */ = {
 			isa = PBXContainerItemProxy;
@@ -739,20 +715,6 @@
 			);
 			buildRules = (
 			);
-			buildSettings = {
-				FRAMEWORK_SEARCH_PATHS = (
-					"/Users/jmt/Worldforge/forge/libs/Atlas-C++/build",
-					/Users/jmt/Worldforge/forge/libs/skstream/build,
-					/Users/jmt/Worldforge/forge/libs/wfmath/build,
-				);
-				GCC_WARN_FOUR_CHARACTER_CONSTANTS = NO;
-				GCC_WARN_UNKNOWN_PRAGMAS = NO;
-				INSTALL_PATH = /usr/local/bin;
-				OTHER_LDFLAGS = "";
-				PRODUCT_NAME = tests;
-				SECTORDER_FLAGS = "";
-				WARNING_CFLAGS = "-Wall";
-			};
 			dependencies = (
 				C4E7E0030606735400721E8D /* PBXTargetDependency */,
 				C45BA21508C5917B00FCB602 /* PBXTargetDependency */,
@@ -774,36 +736,6 @@
 			);
 			buildRules = (
 			);
-			buildSettings = {
-				DEPLOYMENT_LOCATION = NO;
-				DYLIB_COMPATIBILITY_VERSION = 2;
-				DYLIB_CURRENT_VERSION = 2;
-				FRAMEWORK_SEARCH_PATHS = (
-					../wfmath/build,
-					../skstream/build,
-					"../Atlas-C++/build",
-				);
-				FRAMEWORK_VERSION = B;
-				GCC_PRECOMPILE_PREFIX_HEADER = NO;
-				GCC_PREFIX_HEADER = "";
-				GCC_WARN_FOUR_CHARACTER_CONSTANTS = NO;
-				GCC_WARN_UNKNOWN_PRAGMAS = NO;
-				INSTALL_PATH = "@executable_path/../Frameworks";
-				OTHER_CFLAGS = "";
-				OTHER_LDFLAGS = (
-					"-seg1addr",
-					0x21000000,
-				);
-				OTHER_LIBTOOL_FLAGS = "";
-				OTHER_REZFLAGS = "";
-				PRINCIPAL_CLASS = "";
-				PRODUCT_NAME = Eris;
-				SECTORDER_FLAGS = "";
-				SKIP_INSTALL = YES;
-				WARNING_CFLAGS = "-Wall";
-				WRAPPER_EXTENSION = framework;
-				ZERO_LINK = NO;
-			};
 			comments = "The WorldForge client-side session layer, which simplifies Atlas communication for many clients.";
 			dependencies = (
 				C4E4B1FB0876A0C400E0869F /* PBXTargetDependency */,
@@ -826,21 +758,6 @@
 			);
 			buildRules = (
 			);
-			buildSettings = {
-				FRAMEWORK_SEARCH_PATHS = (
-					"/Users/jmt/Worldforge/forge/libs/Atlas-C++/build",
-					/Users/jmt/Worldforge/forge/libs/skstream/build,
-					/Users/jmt/Worldforge/forge/libs/wfmath/build,
-				);
-				GCC_WARN_FOUR_CHARACTER_CONSTANTS = NO;
-				GCC_WARN_UNKNOWN_PRAGMAS = NO;
-				INSTALL_PATH = /usr/local/bin;
-				OTHER_CFLAGS = "";
-				OTHER_LDFLAGS = "";
-				PRODUCT_NAME = metaQuery;
-				SECTORDER_FLAGS = "";
-				WARNING_CFLAGS = "-Wall";
-			};
 			dependencies = (
 				C4AD293E05FA548700AFB402 /* PBXTargetDependency */,
 				C45BA20808C5912200FCB602 /* PBXTargetDependency */,
@@ -858,12 +775,6 @@
 		C43FBCE9054315B9008FC2ED /* Project object */ = {
 			isa = PBXProject;
 			buildConfigurationList = C4EBAF5308559CDF00872BBB /* Build configuration list for PBXProject "Eris" */;
-			buildSettings = {
-			};
-			buildStyles = (
-				C43FBCE7054315B9008FC2ED /* Development */,
-				C43FBCE8054315B9008FC2ED /* Deployment */,
-			);
 			hasScannedForEncodings = 1;
 			mainGroup = C43FBCE5054315B9008FC2ED;
 			productRefGroup = C43FBCF1054315C5008FC2ED /* Products */;
