@@ -225,6 +225,7 @@ protected:
     } Status;
         
     void internalDeactivateCharacter(Avatar* av);
+    void updateFromObject(const Atlas::Objects::Entity::Account &p);
 private:
     Connection* m_con;	///< underlying connection instance
     Status m_status;    ///< what the Player is currently doing
